kubernetes/applications/vaultwarden/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: vaultwarden
  replicas: 1
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:1.37.0-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/data"
              name: vaultwarden-volume-mount
      volumes:
        - name: vaultwarden-volume-mount
          persistentVolumeClaim:
            claimName: vaultwarden-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
spec:
  type: ClusterIP
  selector:
    app: vaultwarden
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
spec:
  routes:
    - kind: Rule
      match: Host(`vw.riichi.me`)
      priority: 10
      services:
        - name: vaultwarden
          port: 80
